[components] Fix z-index of StyleSelect

--- a/packages/@sanity/components/src/selects/styles/StyleSelect.css
+++ b/packages/@sanity/components/src/selects/styles/StyleSelect.css
@@ -4,6 +4,7 @@
   display: block;
   outline: none;
   position: relative;
+  z-index: var(--zindex-dropdown);
 
   @nest &:focus {
     box-shadow:
